fixing flexbox wrap to make responsive & font-size

--- a/styles/main.css
+++ b/styles/main.css
@@ -24,6 +24,7 @@ header {
   margin: 0;
   padding: 0;
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
   /*background-color: 503C3C;*/
@@ -44,6 +45,7 @@ header h1 {
 
 nav ul {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   margin-top: 0;
   margin-bottom: 0;
@@ -57,7 +59,7 @@ nav a {
   color: #a87c7c;
 }
 nav a:hover {
-  color: #a87c7c;
+  color: #503c3c;
 }
 
 h1 {
@@ -86,49 +88,55 @@ h1 {
   padding-bottom: 20px;
 }
 .intro-container p {
-  padding-bottom: 10px;
-
-  font-size: 1rem;
+  padding: 10px;
+  font-size: 2rem;
 }
 
 .journey {
   display: grid;
   grid-template-columns: 30% 40% 30%;
-  grid-template-rows: repeat(3, 250px);
+  grid-template-rows: 250px;
   align-items: center;
   justify-items: center;
+  font-size: 1rem;
 }
 .journey-grid-item1 {
   grid-column-start: 1;
   grid-column-end: 2;
   color: #7e6363;
   justify-self: end;
+  align-self: start;
   padding-right: 10px;
 }
 .journey-grid-item2 {
   grid-column-start: 2;
   grid-column-end: 3;
   grid-row-start: 1;
-  grid-row-end: 3;
+  grid-row-end: 2;
 }
 
 .journey-grid-item3 {
   grid-column-start: 3;
   grid-column-end: 4;
-  grid-row-start: 2;
-  grid-row-end: 3;
-  align-self: center;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  align-self: end;
   justify-self: start;
   color: #7e6363;
+  padding: 10px;
 }
 .journey img {
   width: 100%;
-  height: auto;
+  height: 100%;
 }
-
+.end-container {
+  text-align: center;
+  padding: 20px;
+}
 .end-container p {
   margin-bottom: 0;
 }
+
 footer {
   background-color: 503C3C;
   padding: 10px;
